fixed mis-alignment of job titles on resume

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -40,7 +40,6 @@ $headings-font-family:	Vollkorn, serif;
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 h1, h2, h4, h3, h5, h6 {
-    margin-top: 3rem;
 }
 
 h6 {
